force-app/main/default/objects/SIS_Contact_Point__c/SIS_Contact_Point__c.object-meta.xml
<CustomObject>
    <description>Junction object between Contact and Higher Education Institution</description>
    <label>Contact Point</label>
    <nameField>
        <label>Contact Point Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>