force-app/main/default/objects/SIS_Contact_Point__c/fields/SIS_Contact__c.field-meta.xml
<CustomField>
    <fullName>SIS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Points</relationshipLabel>
    <relationshipName>Contact_Points</relationshipName>
    <type>Lookup</type>
</CustomField>