force-app/main/default/objects/SIS_Contact_Point__c/fields/SIS_Contact_Point_Type__c.field-meta.xml
<CustomField>
    <fullName>SIS_Contact_Point_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chairman of the Supervisory Board</fullName>
            </value>
            <value>
                <fullName>Chairman of the Board</fullName>
            </value>
            <value>
                <fullName>President legal person</fullName>
            </value>
            <value>
                <fullName>Business apprenticeship referent</fullName>
            </value>
            <value>
                <fullName>Disability referent</fullName>
            </value>
            <value>
                <fullName>Mobility referent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>