force-app/main/default/objects/SIS_Contact_Point__c/fields/SIS_Higher_Education_Institution__c.field-meta.xml
<CustomField>
    <fullName>SIS_Higher_Education_Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Higher Education Institution</label>
    <referenceTo>SIS_Higher_Education_Institution__c</referenceTo>
    <relationshipLabel>Contact Points</relationshipLabel>
    <relationshipName>Contact_Points</relationshipName>
    <type>Lookup</type>
</CustomField>